2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* mail-component.c (impl_sendAndReceive): New, implementation for
	Evolution.Component.sendAndReceive.
	(mail_component_class_init): Install.

2003-11-13  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-vfolder.c (context_rule_removed): Modified to not use
	EStorage* functions. I don't even think it *needs* to remove the
	folder from the mail-component, the mail-component should just
	pick it up automagically via CamelStore events.

	* em-folder-tree.[c,h]: New folder-tree widget that replaces the
	shell's folder-tree widget.

	* em-folder-tree-model.[c,h]: New source files subclassing
	GtkTreeStore for handling the mess that is drag&drop.

	* em-folder-selection-button.c: Ported to use EMFolderTree.

	* em-folder-selection.c: Ported to use EMFolderTree.

	* em-folder-selector.c: Ported to use EMFolderTree.

	* mail-component.c: Ported to use EMFolderTree.

	* mail-offline-handler.c (storage_go_online): Updated to not pass
	a storage argument.

	* mail-folder-cache.c: Removed storage stuff.

	* mail-send-recv.c (receive_update_got_store): Don't do EStorage*
	stuff anymore.

2003-11-13  Ettore Perazzoli  <ettore@ximian.com>

	* mail-component.c (impl__get_userCreatableItems): New,
	implementation for the Component.userCreatableItems attribute.
	(impl_requestCreateItem): New, implementation for the
	Component.requestCreateItem() method.
	(mail_component_class_init): Install.

2003-11-13  Radek Doulik  <rodo@ximian.com>

	* em-junk-filter.c (em_junk_sa_is_available): new helper function,
	use it before any call to spamassassin, spamc and sa-learn
	(em_junk_sa_test_spamd): first test if spamassassin is available
	(em_junk_sa_test_spamd): rename em_junk_sa_spamd_tested to
	em_junk_sa_tested, always set em_junk_sa_tested

	* mail-folder-cache.c (folder_changed): don't call
	CAMEL_IS_VJUNK_FOLDER, it was added by mistake

2003-11-13  Not Zed  <NotZed@Ximian.com>
